# fastmcp-github

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: action.yml
app/: audit.py  auth.py  main.py  models.py
app/github_api/: authz.py  dispatcher.py  identity.py  policy.py  repo_ops.py  secret_ops.py  team_ops.py
app/static/.well-known/: ai-plugin.json
goodies/: HOWTO.md  github-app-manifest.json  script.py
tests/: bootstrap_local_user.py  test_act.py
